-- SQL dump generated using DBML (dbml.dbdiagram.io)
-- Database: PostgreSQL
-- Generated at: 2026-09-16T06:02:03.585Z

CREATE EXTENSION IF NOT EXISTS postgis;

CREATE TABLE "users" (
  "id" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "username" varchar UNIQUE NOT NULL,
  "email" varchar UNIQUE NOT NULL,
  "display_name" varchar NOT NULL,
  "weight_kg" float,
  "height_cm" float,
  "birth_date" date,
  "resting_hr" int,
  "max_hr" int,
  "ftp_watts" int,
  "timezone" varchar NOT NULL,
  "created_at" timestamp NOT NULL DEFAULT (now()),
  "updated_at" timestamp NOT NULL DEFAULT (now())
);

CREATE TABLE "user_preferences" (
  "user_id" int PRIMARY KEY,
  "unit_system" varchar NOT NULL DEFAULT 'metric',
  "default_sport_id" int,
  "theme" varchar NOT NULL DEFAULT 'system',
  "extra" jsonb
);

CREATE TABLE "sports" (
  "id" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "name" varchar UNIQUE NOT NULL,
  "category" varchar NOT NULL
);

CREATE TABLE "equipment" (
  "id" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "user_id" int NOT NULL,
  "name" varchar NOT NULL,
  "type" varchar NOT NULL,
  "brand" varchar,
  "model" varchar,
  "purchased_at" date,
  "retired_at" date
);

CREATE TABLE "equipment_sports" (
  "equipment_id" int NOT NULL,
  "sport_id" int NOT NULL,
  PRIMARY KEY ("equipment_id", "sport_id")
);

CREATE TABLE "activities" (
  "id" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "user_id" int NOT NULL,
  "sport_id" int NOT NULL,
  "equipment_id" int,
  "source" varchar NOT NULL,
  "external_id" varchar NOT NULL,
  "name" varchar NOT NULL,
  "description" text,
  "started_at" timestamp NOT NULL,
  "moving_time_s" int NOT NULL,
  "elapsed_time_s" int NOT NULL,
  "distance_m" float NOT NULL,
  "elevation_gain_m" float,
  "avg_hr" int,
  "max_hr" int,
  "calories_kcal" int
);

CREATE TABLE "tracks" (
  "id" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "activity_id" int UNIQUE NOT NULL,
  "geom" geometry(LineStringZ,4326) NOT NULL
);

CREATE TABLE "streams" (
  "id" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "activity_id" int NOT NULL,
  "type" varchar NOT NULL,
  "data" jsonb NOT NULL
);

CREATE TABLE "activity_laps" (
  "id" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "activity_id" int NOT NULL,
  "lap_index" int NOT NULL,
  "lap_type" varchar NOT NULL,
  "started_at" timestamp NOT NULL,
  "elapsed_time_s" int NOT NULL,
  "distance_m" float,
  "elevation_change_m" float,
  "avg_speed_mps" float,
  "max_speed_mps" float
);

CREATE TABLE "segments" (
  "id" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "name" varchar NOT NULL,
  "sport_id" int NOT NULL,
  "geom" geometry(LineString,4326) NOT NULL,
  "created_at" timestamp NOT NULL DEFAULT (now())
);

CREATE TABLE "segment_efforts" (
  "id" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "segment_id" int NOT NULL,
  "activity_id" int NOT NULL,
  "elapsed_time_s" int NOT NULL,
  "achieved_at" timestamp NOT NULL
);

CREATE TABLE "import_events" (
  "id" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "user_id" int NOT NULL,
  "source" varchar NOT NULL,
  "status" varchar NOT NULL,
  "activity_id" int,
  "error_message" text,
  "created_at" timestamp NOT NULL DEFAULT (now())
);

CREATE TABLE "client_devices" (
  "id" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "user_id" int NOT NULL,
  "client_key" varchar UNIQUE NOT NULL,
  "label" varchar,
  "platform" varchar NOT NULL,
  "app_version" varchar,
  "first_seen_at" timestamp NOT NULL DEFAULT (now()),
  "last_seen_at" timestamp NOT NULL DEFAULT (now())
);

CREATE UNIQUE INDEX "uq_activities_source_external_id" ON "activities" ("source", "external_id");

COMMENT ON COLUMN "users"."weight_kg" IS 'for TSS, power-to-weight';

COMMENT ON COLUMN "users"."birth_date" IS 'for age-based HR zones';

COMMENT ON COLUMN "users"."ftp_watts" IS 'cycling, nullable';

COMMENT ON COLUMN "user_preferences"."user_id" IS 'shared PK/FK — one-to-one with users';

COMMENT ON COLUMN "user_preferences"."unit_system" IS 'metric or imperial, display only';

COMMENT ON COLUMN "user_preferences"."default_sport_id" IS 'nullable';

COMMENT ON COLUMN "user_preferences"."extra" IS 'future settings, no migration needed';

COMMENT ON COLUMN "sports"."name" IS 'running, road_cycling, mtb, alpine_ski, nordic_ski, hike, swim';

COMMENT ON COLUMN "sports"."category" IS 'endurance, strength, other';

COMMENT ON COLUMN "equipment"."name" IS 'e.g. Pegasus 40 (right)';

COMMENT ON COLUMN "equipment"."type" IS 'shoe, bike, ski, other';

COMMENT ON COLUMN "equipment"."retired_at" IS 'nullable — NULL means active; a date means retired. No separate is_active flag.';

COMMENT ON COLUMN "activities"."equipment_id" IS 'nullable';

COMMENT ON COLUMN "activities"."source" IS 'strava_import, garmin_sync, manual';

COMMENT ON COLUMN "activities"."external_id" IS 'dedupe key from source';

COMMENT ON COLUMN "activities"."description" IS 'nullable — merges Strava description + private note; nothing in wilkr is ever public, so that distinction does not matter here';

COMMENT ON COLUMN "activities"."max_hr" IS 'peak HR reached during this activity — distinct from users.max_hr, the training-zone ceiling';

COMMENT ON COLUMN "tracks"."geom" IS 'SRID 4326';

COMMENT ON COLUMN "streams"."type" IS 'heart_rate, elevation, speed, cadence, power';

COMMENT ON COLUMN "streams"."data" IS 'time-series array';

COMMENT ON COLUMN "activity_laps"."lap_type" IS 'run, lift, active, rest, interval';

COMMENT ON COLUMN "segments"."geom" IS 'SRID 4326';

COMMENT ON TABLE "segment_efforts" IS 'PR status is computed on read — RANK() OVER (PARTITION BY segment_id, activity.user_id ORDER BY elapsed_time_s) — not stored, so backfilled/out-of-order imports can never leave a stale is_pr flag.';

COMMENT ON COLUMN "import_events"."source" IS 'strava_import, garmin_sync, manual';

COMMENT ON COLUMN "import_events"."status" IS 'pending, success, failed, duplicate';

COMMENT ON COLUMN "import_events"."activity_id" IS 'nullable — set once the import succeeds';

COMMENT ON COLUMN "import_events"."error_message" IS 'nullable';

COMMENT ON TABLE "client_devices" IS 'Informational only, not an auth mechanism — Tailscale is the actual access-control layer. All devices share the one API key; this table just powers a "what has been using my library" dashboard, upserted on each check-in by client_key.';

COMMENT ON COLUMN "client_devices"."client_key" IS 'random ID generated once by the device and stored locally — not a credential, just a stable self-reported identity so repeat visits upsert the same row';

COMMENT ON COLUMN "client_devices"."label" IS 'friendly device name, e.g. "Ivan iPhone 15" — self-reported, editable later';

COMMENT ON COLUMN "client_devices"."platform" IS 'ios, web, other';

COMMENT ON COLUMN "client_devices"."app_version" IS 'nullable — self-reported client version';

ALTER TABLE "activities" ADD FOREIGN KEY ("user_id") REFERENCES "users" ("id");

ALTER TABLE "equipment" ADD FOREIGN KEY ("user_id") REFERENCES "users" ("id");

ALTER TABLE "user_preferences" ADD FOREIGN KEY ("user_id") REFERENCES "users" ("id");

ALTER TABLE "activities" ADD FOREIGN KEY ("sport_id") REFERENCES "sports" ("id");

ALTER TABLE "segments" ADD FOREIGN KEY ("sport_id") REFERENCES "sports" ("id");

ALTER TABLE "equipment_sports" ADD FOREIGN KEY ("sport_id") REFERENCES "sports" ("id");

ALTER TABLE "equipment_sports" ADD FOREIGN KEY ("equipment_id") REFERENCES "equipment" ("id");

ALTER TABLE "activities" ADD FOREIGN KEY ("equipment_id") REFERENCES "equipment" ("id");

ALTER TABLE "tracks" ADD FOREIGN KEY ("activity_id") REFERENCES "activities" ("id");

ALTER TABLE "streams" ADD FOREIGN KEY ("activity_id") REFERENCES "activities" ("id");

ALTER TABLE "activity_laps" ADD FOREIGN KEY ("activity_id") REFERENCES "activities" ("id");

ALTER TABLE "segment_efforts" ADD FOREIGN KEY ("activity_id") REFERENCES "activities" ("id");

ALTER TABLE "segment_efforts" ADD FOREIGN KEY ("segment_id") REFERENCES "segments" ("id");

ALTER TABLE "user_preferences" ADD FOREIGN KEY ("default_sport_id") REFERENCES "sports" ("id");

ALTER TABLE "import_events" ADD FOREIGN KEY ("user_id") REFERENCES "users" ("id");

ALTER TABLE "import_events" ADD FOREIGN KEY ("activity_id") REFERENCES "activities" ("id");

ALTER TABLE "client_devices" ADD FOREIGN KEY ("user_id") REFERENCES "users" ("id");

-- CHECK constraints on fixed-value columns — DBML has no native CHECK syntax,
-- so these are appended by hand after each dbml2sql regeneration.
-- sports.name is intentionally left unconstrained: it is an extensible
-- lookup table, not a fixed enum.

ALTER TABLE "activities" ADD CONSTRAINT "ck_activities_source" CHECK ("source" IN ('strava_import', 'garmin_sync', 'manual'));

ALTER TABLE "import_events" ADD CONSTRAINT "ck_import_events_source" CHECK ("source" IN ('strava_import', 'garmin_sync', 'manual'));

ALTER TABLE "import_events" ADD CONSTRAINT "ck_import_events_status" CHECK ("status" IN ('pending', 'success', 'failed', 'duplicate'));

ALTER TABLE "streams" ADD CONSTRAINT "ck_streams_type" CHECK ("type" IN ('heart_rate', 'elevation', 'speed', 'cadence', 'power'));

ALTER TABLE "activity_laps" ADD CONSTRAINT "ck_activity_laps_lap_type" CHECK ("lap_type" IN ('run', 'lift', 'active', 'rest', 'interval'));

ALTER TABLE "equipment" ADD CONSTRAINT "ck_equipment_type" CHECK ("type" IN ('shoe', 'bike', 'ski', 'other'));

ALTER TABLE "sports" ADD CONSTRAINT "ck_sports_category" CHECK ("category" IN ('endurance', 'strength', 'other'));

ALTER TABLE "user_preferences" ADD CONSTRAINT "ck_user_preferences_unit_system" CHECK ("unit_system" IN ('metric', 'imperial'));

ALTER TABLE "client_devices" ADD CONSTRAINT "ck_client_devices_platform" CHECK ("platform" IN ('ios', 'web', 'other'));

-- Spatial GIST indexes — DBML has no way to express USING GIST either, so
-- these are appended by hand too. GeoAlchemy2 expects one on every Geometry
-- column by default (spatial_index=True) — without it, segment matching's
-- PostGIS spatial-buffer queries would be a full table scan.

CREATE INDEX "idx_tracks_geom" ON "tracks" USING GIST ("geom");

CREATE INDEX "idx_segments_geom" ON "segments" USING GIST ("geom");
