Project wilkr {
  database_type: 'PostgreSQL'
  Note: 'Self-hosted fitness platform — schema compiled from OpenFit-Charter-v4 / openfit-context / openfit-erd for review before writing the Alembic migration. Geometry columns assume PostGIS is enabled. DBML has no native CHECK constraint syntax, so the fixed-value columns (activities.source, import_events.source/status, streams.type, activity_laps.lap_type, equipment.type, sports.category, user_preferences.unit_system, client_devices.platform) are constrained only in the generated wilkr.postgres.sql, appended by hand after each dbml2sql run — see that file for the authoritative list. sports.name is deliberately left unconstrained: it is an extensible lookup table, not a fixed enum. Same story for the GIST spatial indexes on tracks.geom and segments.geom (DBML has no USING GIST syntax) — also hand-appended to wilkr.postgres.sql only. dbml2sql defaults every foreign key to DEFERRABLE INITIALLY IMMEDIATE; that clause was stripped by hand from wilkr.postgres.sql since nothing in this app needs deferrable constraints (no circular FKs, no out-of-order inserts within a transaction) and Alembic autogenerate treats DEFERRABLE as a real property mismatch against the plain (non-deferrable) FKs the SQLAlchemy models declare.'
}

Table users {
  id int [pk, increment]
  username varchar [not null, unique]
  email varchar [not null, unique]
  display_name varchar [not null]
  weight_kg float [note: 'for TSS, power-to-weight']
  height_cm float
  birth_date date [note: 'for age-based HR zones']
  resting_hr int
  max_hr int
  ftp_watts int [note: 'cycling, nullable']
  timezone varchar [not null]
  created_at timestamp [not null, default: `now()`]
  updated_at timestamp [not null, default: `now()`]
}

Table user_preferences {
  user_id int [pk, note: 'shared PK/FK — one-to-one with users']
  unit_system varchar [not null, default: 'metric', note: 'metric or imperial, display only']
  default_sport_id int [note: 'nullable']
  theme varchar [not null, default: 'system']
  extra jsonb [note: 'future settings, no migration needed']
}

Table sports {
  id int [pk, increment]
  name varchar [not null, unique, note: 'running, road_cycling, mtb, alpine_ski, nordic_ski, hike, swim']
  category varchar [not null, note: 'endurance, strength, other']
}

Table equipment {
  id int [pk, increment]
  user_id int [not null]
  name varchar [not null, note: 'e.g. Pegasus 40 (right)']
  type varchar [not null, note: 'shoe, bike, ski, other']
  brand varchar
  model varchar
  purchased_at date
  retired_at date [note: 'nullable — NULL means active; a date means retired. No separate is_active flag.']
}

Table equipment_sports {
  equipment_id int [not null]
  sport_id int [not null]

  indexes {
    (equipment_id, sport_id) [pk]
  }
}

Table activities {
  id int [pk, increment]
  user_id int [not null]
  sport_id int [not null]
  equipment_id int [note: 'nullable']
  source varchar [not null, note: 'strava_import, garmin_sync, manual']
  external_id varchar [not null, note: 'dedupe key from source']
  name varchar [not null]
  description text [note: 'nullable — merges Strava description + private note; nothing in wilkr is ever public, so that distinction does not matter here']
  started_at timestamp [not null]
  moving_time_s int [not null]
  elapsed_time_s int [not null]
  distance_m float [not null]
  elevation_gain_m float
  avg_hr int
  max_hr int [note: 'peak HR reached during this activity — distinct from users.max_hr, the training-zone ceiling']
  calories_kcal int

  indexes {
    (source, external_id) [unique, name: 'uq_activities_source_external_id']
  }
}

Table tracks {
  id int [pk, increment]
  activity_id int [not null, unique]
  geom "geometry(LineStringZ,4326)" [not null, note: 'SRID 4326']
}

Table streams {
  id int [pk, increment]
  activity_id int [not null]
  type varchar [not null, note: 'heart_rate, elevation, speed, cadence, power']
  data jsonb [not null, note: 'time-series array']
}

Table activity_laps {
  id int [pk, increment]
  activity_id int [not null]
  lap_index int [not null]
  lap_type varchar [not null, note: 'run, lift, active, rest, interval']
  started_at timestamp [not null]
  elapsed_time_s int [not null]
  distance_m float
  elevation_change_m float
  avg_speed_mps float
  max_speed_mps float
}

Table segments {
  id int [pk, increment]
  name varchar [not null]
  sport_id int [not null]
  geom "geometry(LineString,4326)" [not null, note: 'SRID 4326']
  created_at timestamp [not null, default: `now()`]
}

Table segment_efforts {
  id int [pk, increment]
  segment_id int [not null]
  activity_id int [not null]
  elapsed_time_s int [not null]
  achieved_at timestamp [not null]

  Note: 'PR status is computed on read — RANK() OVER (PARTITION BY segment_id, activity.user_id ORDER BY elapsed_time_s) — not stored, so backfilled/out-of-order imports can never leave a stale is_pr flag.'
}

Table import_events {
  id int [pk, increment]
  user_id int [not null]
  source varchar [not null, note: 'strava_import, garmin_sync, manual']
  status varchar [not null, note: 'pending, success, failed, duplicate']
  activity_id int [note: 'nullable — set once the import succeeds']
  error_message text [note: 'nullable']
  created_at timestamp [not null, default: `now()`]
}

Table client_devices {
  id int [pk, increment]
  user_id int [not null]
  client_key varchar [not null, unique, note: 'random ID generated once by the device and stored locally — not a credential, just a stable self-reported identity so repeat visits upsert the same row']
  label varchar [note: 'friendly device name, e.g. "Ivan iPhone 15" — self-reported, editable later']
  platform varchar [not null, note: 'ios, web, other']
  app_version varchar [note: 'nullable — self-reported client version']
  first_seen_at timestamp [not null, default: `now()`]
  last_seen_at timestamp [not null, default: `now()`]

  Note: 'Informational only, not an auth mechanism — Tailscale is the actual access-control layer. All devices share the one API key; this table just powers a "what has been using my library" dashboard, upserted on each check-in by client_key.'
}

Ref: activities.user_id > users.id
Ref: equipment.user_id > users.id
Ref: user_preferences.user_id > users.id
Ref: activities.sport_id > sports.id
Ref: segments.sport_id > sports.id
Ref: equipment_sports.sport_id > sports.id
Ref: equipment_sports.equipment_id > equipment.id
Ref: activities.equipment_id > equipment.id
Ref: tracks.activity_id > activities.id
Ref: streams.activity_id > activities.id
Ref: activity_laps.activity_id > activities.id
Ref: segment_efforts.activity_id > activities.id
Ref: segment_efforts.segment_id > segments.id
Ref: user_preferences.default_sport_id > sports.id
Ref: import_events.user_id > users.id
Ref: import_events.activity_id > activities.id
Ref: client_devices.user_id > users.id
